# 1

./: .env.example  .gitignore  LICENSE  commit_msg.txt  dashboard.bat  pyproject.toml
.claude/commands/: goal.md
docs/: arb_campaign_runbook.md  competitive_analysis_2026-06-09.md  diag_bias_footprint_2026-06-11.md  diag_kalshi_categories_2026-06-13.md  diag_lowvol_maker_2026-06-11.md  diag_noarb.md  diag_overnight_sweep.md  diag_pm_history_2026-06-13.md  diag_risklimits.md  diag_signalseam.md  kalshi_depth_c3_replay_2026-05-30.md  overnight_characterization_2026-06-09.md  paper-trading-plan.md  todo.md
llm_trader/: gui.py  requirements.txt
llm_trader/api/: alpha_vantage_api.py  deepseek_api.py  public_api.py
llm_trader/ml/: predictive_model.py
llm_trader/trading/: backtester.py  trader.py
llm_trader/utils/: config.py
src/btc_pm_arb/: __init__.py  clock.py  config.py  keepawake.py  main.py  models.py
src/btc_pm_arb/execution/: benchmark_settlement.py  fill_simulator.py  orders.py  paper_ledger.py  paper_positions.py  paper_settlement.py  positions.py  risk.py  risk_limits.py  settlement.py
src/btc_pm_arb/feeds/: __init__.py  _kalshi_auth.py  aux_capture.py  deribit.py  discovery.py  health.py  kalshi.py  normalizer.py  polymarket.py  recorder.py  replay.py  watchdog.py
src/btc_pm_arb/pricing/: basis_adjuster.py  cache.py  digital_pricer.py  noarb.py  realized_vol.py  vol_surface.py
src/btc_pm_arb/server/: app.py  state.py
src/btc_pm_arb/signals/: confidence.py  edge.py  filters.py  matcher.py  velocity.py
streambridge/: .env.example  .gitignore  README.md  package.json  tsconfig.base.json  turbo.json
streambridge/apps/mobile/: App.tsx  app.json  (+3 more)
streambridge/backend/: package.json  tsconfig.json
tests/: conftest.py
tests/test_execution/: test_benchmark_settlement.py  test_fill_simulator.py  test_integration.py  test_ledger_run_stamp.py  test_orders_paper_mode.py  test_paper_ledger.py  test_paper_ledger_rejections.py  test_paper_pipeline.py  test_paper_positions.py  test_paper_settlement.py  test_risk_limits.py
tests/test_feeds/: test_aux_capture.py  test_deribit_parser.py  test_discovery.py  test_kalshi.py  test_kalshi_depth.py  test_normalizer.py  test_polymarket.py  test_recorder.py  test_recorder_fault_injection.py  test_replay.py  test_watchdog.py
tests/test_main/: __init__.py  test_clock_seam.py  test_dashboard_stop.py  test_keepawake.py  test_noarb_shadow.py  test_record_feeds_guards.py  test_scan_pipeline.py  test_stop_signals.py
tests/test_pricing/: test_basis_adjuster.py  test_cache.py  test_digital_pricer.py  test_noarb.py  test_realized_vol.py  test_vol_surface.py
tests/test_server/: test_dashboard.py  test_launcher.py
tests/test_signals/: test_confidence.py  test_edge.py  test_enhancements.py  test_filters.py  test_matcher.py
tests/test_tools/: test_analyze_paper_ledger.py  test_analyze_paper_ledger_9b2.py  test_analyze_run_scope.py  test_tail_funnel.py
tools/: __init__.py  analyze_paper_ledger.py  tail_funnel.py
tools/analysis/: __init__.py  charts.py  report.py  stats.py
(+51 files in other folders)
