[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-pm-arb"
version = "0.1.0"
description = "BTC options-implied probability arbitrage agent against Polymarket and Kalshi"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "py-clob-client>=0.18",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "anyio[trio]>=4.3",
]

[project.scripts]
btc-pm-arb = "btc_pm_arb.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_pm_arb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
strict = true
