[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-pm-arb"
version = "0.1.0"
description = "BTC options-implied probability arbitrage agent against Polymarket and Kalshi"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "py-clob-client>=0.18",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pmxt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "anyio[trio]>=4.3",
    # Round 9b1: analysis tooling tests need pandas + pyarrow (parquet)
    # to exercise tools/analyze_paper_ledger.py.  Adding to ``dev`` so
    # ``pip install -e .[dev]`` covers the full test suite.  The
    # ``analysis`` extras group below is for users who only want the
    # tooling without the test dependencies.
    "pandas>=2.0",
    "pyarrow>=14.0",
    # Round 9b2a: matplotlib (chart rendering) + statsmodels (binary
    # logit for outcome calibration) are exercised by the
    # tests/test_tools/test_analyze_paper_ledger_9b2.py library-direct
    # tests.  Pinned versions match the [analysis] group.
    "matplotlib>=3.8",
    "statsmodels>=0.14",
]
# Round 9b: paper-ledger analysis tooling.  Optional extras so the
# runtime agent doesn't pull in pandas / pyarrow / matplotlib /
# statsmodels unnecessarily.  Install with ``pip install -e .[analysis]``.
analysis = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    # Round 9b2a: charts + inferential statistics.
    "matplotlib>=3.8",
    "statsmodels>=0.14",
]

[project.scripts]
btc-pm-arb = "btc_pm_arb.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_pm_arb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::RuntimeWarning:numpy",
]

[tool.pyright]
pythonVersion = "3.11"
strict = true
